--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
   
-
+<audio src="NEW.mp3" autoplay loop ></audio>
 
 <!-- banner -->
 <section class="banner bg-cover position-relative d-flex justify-content-center align-items-center"
